# PuppyCourses

./: .coverage  .env.example  .gitignore  CHANGELOG.md  Comercializacion.md  Cursos_posibles.txt  Integracion_Teledigitos_Fase2.txt  README.md  ROADMAP.md  VideoCreation_handling.md  pyproject.toml  requirements.txt  script_generator.py
data/: pruebas_trixie.json
script_generator/: __init__.py  generator.py  types.py
script_generator/templates/: benchmark.jinja2  gancho.jinja2  pildora.jinja2  teledigitos_hack.jinja2  tutorial.jinja2
tests/: test_script_generator.py
